--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Formulário de Denúncia Ambiental</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <title>Formulário de Denúncia Ambiental</title>
 </head>
+
 <body>
-
-<h1>Formulário de Denúncia Ambiental</h1>
-
-<form id="denunciaForm" enctype="multipart/form-data">
-  <div>
-    <label for="nome">Nome:</label><br>
-    <input type="text" id="nome" name="nome"><br>
-  </div>
-  <div>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br>
-  </div>
-  <div>
-    <label for="localizacao">Localização:</label><br>
-    <input type="text" id="localizacao" name="localizacao"><br>
-  </div>
-  <div>
-    <label for="descricao">Descrição da Denúncia:</label><br>
-    <textarea id="descricao" name="descricao" rows="4" required></textarea><br>
-  </div>
-  <div>
-    <label for="foto">Foto (opcional):</label><br>
-    <input type="file" id="foto" name="foto" accept="image/*"><br>
-  </div>
-  <div>
-    <input type="checkbox" id="anonima" name="anonima">
-    <label for="anonima">Enviar denúncia de forma anônima</label><br><br>
-  </div>
-  <div>
-    <button type="submit">Enviar Denúncia</button>
-  </div>
-</form>
-
-<script src="script.js"></script>
-
+    <div class="container">
+        <h1>Formulário de Denúncia Ambiental<p></p>
+        </h1>
+        <h3>Central de Atendimento</h3>
+        <h4>
+            <ul>
+                <li>
+                    Horário de Atendimento:
+                    <br>
+                    08:00 às 12:00
+                    <br>
+                    14:00 às 18:00
+                </li>
+                <li>
+                    Telefone:
+                    <br>
+                    +55 (81) 3333-3333
+                </li>
+                <li>
+                    E-mail:
+                    <br>
+                    denuncia@contato.pe.br
+                </li>
+            </ul>
+        </h4>
+        <h4>
+            <p>Se presenciar algum incidente, relate abaixo:</p>
+            <a href="denuncia.html" class="btn">Denuncie</a>
+        </h4>
+    </div>
 </body>
+
 </html>
-
-
