--- a/confirmacao.html
+++ b/confirmacao.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <title>Confirmação</title>
+    <title>Confirmação de Envio</title>
 </head>
 
 <body>
     <div class="container">
         <h1>Obrigado por sua Denúncia!</h1>
         <p>Sua denúncia foi enviada com sucesso.</p>
-        <a href="index.html" class="btn">Voltar para a Página Inicial</a>
+        <a href="index.html" class="btn">Voltar para a página inicial</a>
         <!-- Coloque o código HTML da caixa de confirmação aqui -->
         <div class="confirm-box">
             <p>Acreditamos na importância de criar um ambiente seguro e acolhedor para todos. Sua voz é crucial para alcançarmos esse objetivo.</p>
