--- a/denuncia.html
+++ b/denuncia.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <title>Formulário de Denúncia</title>
+    <title>GREEN APP FORMULÁRIO</title>
 </head>
 <body>
     <div class="container">
-        <h1>Formulário de Denúncia</h1>
+        <h1>GREEN APP Formulário</h1>
         <form id="incidentForm">
             <div class="form-group">
                 <label for="name">Nome (opcional):</label>
