--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <title>Formulário de Denúncia Ambiental</title>
+    <title>  HOME - GREEN APP </title>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#2196f3">
 </head>
 
 <body>
